<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.shuqi</groupId>
	<artifactId> image-io-bug-fix</artifactId>
	<version>1.2</version>
	<packaging>jar</packaging>
	<name>${project.artifactId}</name>
	<description>
	---------------------------------------------------------------------------------------------------------
	修复JDK BUG 
	java.lang.ArrayIndexOutOfBoundsException: 4096
	    at com.sun.imageio.plugins.gif.GIFImageReader.read(Unknown Source)
	    at javax.imageio.ImageIO.read(Unknown Source)
	    at javax.imageio.ImageIO.read(Unknown Source)
	[PatchedGIFImageReader](https://pastebin.com/h58zjT8K)
	[arrayindexoutofboundsexception](https://stackoverflow.com/questions/22259714/arrayindexoutofboundsexception-4096-while-reading-gif-file)
	---------------------------------------------------------------------------------------------------------
	项目全部源代码来自于：https://github.com/haraldk/TwelveMonkeys@3.3-SNAPSHOT，本项目只是将原来代码的imageIO扩展部分进行简单的合并。合并的具体模块如下：
		common-image、common-io、common-lang
		imageio-core、imageio-metadata
		imageio-bmp、imageio-jpeg、imageio-tiff、imageio-iff
	servlet:com.twelvemonkeys.servlet.image.IIOProviderContextListener
	*在web系统中使用需要在web.xml中注册IIOProviderContextListener监听器，
	*本代码需要在JDK　1.7+中运行
	</description>

	<!-- BSD声明 -->
	<licenses>
		<license>
			<name>The BSD License</name>
			<url>https://github.com/haraldk/TwelveMonkeys#license</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<!-- 开发者 -->
	<developers>
		<developer>
			<id>harald.kuhr</id>
			<name>Harald Kuhr</name>
			<email>harald.kuhr@gmail.com</email>
			<organization>Twelvemonkeys</organization>
			<roles>
				<role>project-owner</role>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<!-- 代码贡献 -->
	<contributors>
		<contributor>
			<name>Erlend Hamnaberg</name>
			<email>erlend@hamnaberg.net</email>
			<roles>
				<role>maven-guru</role>
			</roles>
		</contributor>
		<contributor>
			<name>Oliver Schmidtmer</name>
			<email>mail@trek7891.de</email>
			<roles>
				<role>contributor</role>
			</roles>
		</contributor>
		<contributor>
			<name>Jason Palmer</name>
			<email>jpalmer@itemmaster.com</email>
			<roles>
				<role>contributor</role>
			</roles>
		</contributor>
	</contributors>

	<!-- issues -->
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/haraldk/TwelveMonkeys/issues</url>
	</issueManagement>

	<!-- scm -->
	<scm>
		<connection>scm:git:https://github.com/haraldk/TwelveMonkeys</connection>
		<developerConnection>scm:git:https://github.com/haraldk/TwelveMonkeys</developerConnection>
		<url>https://github.com/haraldk/TwelveMonkeys</url>
		<tag>HEAD</tag>
	</scm>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>jmagick</groupId>
			<artifactId>jmagick</artifactId>
			<version>${jmagick.version}</version>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>${jsp-api.version}</version>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>${servlet-api.version}</version>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>
		<!-- Annotations from the Checker Framework: nullness, interning, locking, ... -->
		<dependency>
			<groupId>org.checkerframework</groupId>
			<artifactId>checker-qual</artifactId>
			<version>3.17.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.errorprone</groupId>
			<artifactId>javac</artifactId>
			<version>9+181-r4173-1</version>
		</dependency>
	</dependencies>


	<build>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<plugins>
			<plugin>
				<!-- This plugin will set properties values using dependency information -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<fork>true</fork>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.encoding}</encoding>
					<compilerArguments>
						<Xmaxerrs>10000</Xmaxerrs>
						<Xmaxwarns>10000</Xmaxwarns>
					</compilerArguments>
					<annotationProcessorPaths>
						<path>
							<groupId>org.checkerframework</groupId>
							<artifactId>checker</artifactId>
							<version>3.17.0</version>
						</path>
					</annotationProcessorPaths>
					<annotationProcessors>
						<!-- Add all the checkers you want to enable here -->
						<annotationProcessor>org.checkerframework.checker.iteration.IterationChecker</annotationProcessor>
					</annotationProcessors>
					<compilerArgs>
						<arg>-AwarnUnneededSuppressions</arg>
						<arg>"-AsuppressWarnings=conditional.postcondition,contracts.postcondition,override.return"</arg>
						<!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-source-plugin</artifactId>
	            <version>3.0.1</version>
	            <executions>
	                <execution>
	                    <id>attach-sources</id>
	                    <goals>
	                        <goal>jar</goal>
	                    </goals>
	                </execution>
	            </executions>
	        </plugin>
		</plugins>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<mockito.version>1.8.5</mockito.version>
		<jmagick.version>6.2.4</jmagick.version>
		<junit.version>4.12</junit.version>
		<jsp-api.version>2.2</jsp-api.version>
		<servlet-api.version>2.4</servlet-api.version>
		<project.encoding>UTF-8</project.encoding>
		<!-- These properties will be set by the Maven Dependency plugin -->
		<errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>
	</properties>

	<profiles>
		<profile>
			<id>checkerframework</id>
			<activation>
				<jdk>[1.8,13)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
							<compilerArguments>
								<Xmaxerrs>10000</Xmaxerrs>
								<Xmaxwarns>10000</Xmaxwarns>
							</compilerArguments>
							<annotationProcessorPaths>
								<path>
									<groupId>org.checkerframework</groupId>
									<artifactId>checker</artifactId>
									<version>3.17.0</version>
								</path>
							</annotationProcessorPaths>
							<annotationProcessors>
								<!-- Add all the checkers you want to enable here -->
								<annotationProcessor>org.checkerframework.checker.iteration.IterationChecker</annotationProcessor>
							</annotationProcessors>
							<compilerArgs>
								<arg>-AwarnUnneededSuppressions</arg>
								<arg>"-AsuppressWarnings=conditional.postcondition,contracts.postcondition,override.return"</arg>
								<!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
							</compilerArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.checkerframework</groupId>
					<artifactId>checker</artifactId>
					<version>3.17.0</version>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>checkerframework-jdk8</id>
			<activation>
				<jdk>1.8</jdk>
			</activation>
			<!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
			<properties>
				<javac.version>9+181-r4173-1</javac.version>
			</properties>
			<dependencies>
				<dependency>
					<groupId>com.google.errorprone</groupId>
					<artifactId>javac</artifactId>
					<version>9+181-r4173-1</version>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<fork>true</fork>
							<compilerArgs combine.children="append">
								<arg>-Xbootclasspath/p:${annotatedJdk}</arg>
								<arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar</arg>
							</compilerArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>checkerframework-jdk11</id>
			<activation>
				<jdk>11</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<fork>true</fork>
							<compilerArgs combine.children="append">
								<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
							</compilerArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<properties>
				<!-- Needed for animal-sniffer-maven-plugin version 1.19 (version 1.20 is fixed). -->
				<animal.sniffer.skip>true</animal.sniffer.skip>
			</properties>
		</profile>
	</profiles>
</project>
